@@ -1,123 +1,85 @@
-/*
- * Copyright 2003,2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 package net.sf.cglib.core;
 
-import java.beans.*;
-import java.lang.reflect.*;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
-import java.security.PrivilegedExceptionAction;
-import java.security.ProtectionDomain;
-import java.util.*;
+/**
+ * UTF-8
+ * Created by czy  Time : 2021/11/22 11:18
+ *
+ * @version 1.0
+ */
+
 import org.objectweb.asm.Attribute;
 import org.objectweb.asm.Type;
 
-/**
- * 反射工具类，利用jdk反射相关的类创建对象实例，获取方法，构建方法签名等
- * @version $Id: ReflectUtils.java,v 1.30 2009/01/11 19:47:49 herbyderby Exp $
- */
+import java.beans.BeanInfo;
+import java.beans.IntrospectionException;
+import java.beans.Introspector;
+import java.beans.PropertyDescriptor;
+import java.lang.invoke.MethodHandles;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Member;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.security.ProtectionDomain;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+
+@SuppressWarnings({"rawtypes", "unchecked"})
 public class ReflectUtils {
-    private ReflectUtils() { }
+
+    private ReflectUtils() {
+    }
 
     private static final Map primitives = new HashMap(8);
+
     private static final Map transforms = new HashMap(8);
+
     private static final ClassLoader defaultLoader = ReflectUtils.class.getClassLoader();
-    private static Method DEFINE_CLASS, DEFINE_CLASS_UNSAFE;
-    private static final ProtectionDomain PROTECTION_DOMAIN;
-    private static final Object UNSAFE;
+
+    private static final Method classLoaderDefineClassMethod;
+
     private static final Throwable THROWABLE;
+
+    private static final ProtectionDomain PROTECTION_DOMAIN;
 
     private static final List<Method> OBJECT_METHODS = new ArrayList<Method>();
 
+    // SPRING PATCH BEGIN
     static {
-        ProtectionDomain protectionDomain;
-        Method defineClass, defineClassUnsafe;
-        Object unsafe;
+        // Resolve protected ClassLoader.defineClass method for fallback use
+        // (even if JDK 9+ Lookup.defineClass is preferably used below)
+        Method classLoaderDefineClass;
         Throwable throwable = null;
         try {
-            protectionDomain = getProtectionDomain(ReflectUtils.class);
-            try {
-                defineClass = (Method) AccessController.doPrivileged(new PrivilegedExceptionAction() {
-                    public Object run() throws Exception {
-                            Class loader = Class.forName("java.lang.ClassLoader"); // JVM crash w/o this
-                            Method defineClass = loader.getDeclaredMethod("defineClass",
-                                                                    new Class[]{ String.class,
-                                                                                 byte[].class,
-                                                                                 Integer.TYPE,
-                                                                                 Integer.TYPE,
-                                                                                 ProtectionDomain.class });
-                            defineClass.setAccessible(true);
-                            return defineClass;
-                    }
-                });
-                defineClassUnsafe = null;
-                unsafe = null;
-            } catch (Throwable t) {
-                // Fallback on Jigsaw where this method is not available.
-                throwable = t;
-                defineClass = null;
-                unsafe = AccessController.doPrivileged(new PrivilegedExceptionAction() {
-                    public Object run() throws Exception {
-                        Class u = Class.forName("sun.misc.Unsafe");
-                        Field theUnsafe = u.getDeclaredField("theUnsafe");
-                        theUnsafe.setAccessible(true);
-                        return theUnsafe.get(null);
-                    }
-                });
-                Class u = Class.forName("sun.misc.Unsafe");
-                defineClassUnsafe = u.getMethod("defineClass",
-                                        new Class[]{ String.class,
-                                                     byte[].class,
-                                                     Integer.TYPE,
-                                                     Integer.TYPE,
-                                                     ClassLoader.class,
-                                                     ProtectionDomain.class });
-            }
-            AccessController.doPrivileged(new PrivilegedExceptionAction() {
-                public Object run() throws Exception {
-                    Method[] methods = Object.class.getDeclaredMethods();
-                    for (Method method : methods) {
-                        if ("finalize".equals(method.getName())
-                                || (method.getModifiers() & (Modifier.FINAL | Modifier.STATIC)) > 0) {
-                            continue;
-                        }
-                        OBJECT_METHODS.add(method);
-                    }
-                    return null;
-                }
-            });
-        } catch (Throwable t) {
-            if (throwable == null) {
-                throwable = t;
-            }
-            protectionDomain = null;
-            defineClass = null;
-            defineClassUnsafe = null;
-            unsafe = null;
+            classLoaderDefineClass = ClassLoader.class.getDeclaredMethod("defineClass",
+                    String.class, byte[].class, Integer.TYPE, Integer.TYPE, ProtectionDomain.class);
         }
-        PROTECTION_DOMAIN = protectionDomain;
-        DEFINE_CLASS = defineClass;
-        DEFINE_CLASS_UNSAFE = defineClassUnsafe;
-        UNSAFE = unsafe;
-        THROWABLE = throwable;
-    }
+        catch (Throwable t) {
+            classLoaderDefineClass = null;
+            throwable = t;
+        }
 
-    private static final String[] CGLIB_PACKAGES = {
-        "java.lang",
-    };
+        classLoaderDefineClassMethod = classLoaderDefineClass;
+        THROWABLE = throwable;
+        PROTECTION_DOMAIN = getProtectionDomain(ReflectUtils.class);
+
+        for (Method method : Object.class.getDeclaredMethods()) {
+            if ("finalize".equals(method.getName())
+                    || (method.getModifiers() & (Modifier.FINAL | Modifier.STATIC)) > 0) {
+                continue;
+            }
+            OBJECT_METHODS.add(method);
+        }
+    }
+    // SPRING PATCH END
+
+    private static final String[] CGLIB_PACKAGES = {"java.lang"};
 
     static {
         primitives.put("byte", Byte.TYPE);
@@ -140,35 +102,35 @@ public class ReflectUtils {
     }
 
     public static ProtectionDomain getProtectionDomain(final Class source) {
-    	if(source == null) {
-    		return null;
-    	}
-        return (ProtectionDomain)AccessController.doPrivileged(new PrivilegedAction() {
-            public Object run() {
-                return source.getProtectionDomain();
-            }
-        });
+        if (source == null) {
+            return null;
+        }
+        return source.getProtectionDomain();
     }
 
     public static Type[] getExceptionTypes(Member member) {
         if (member instanceof Method) {
-            return TypeUtils.getTypes(((Method)member).getExceptionTypes());
-        } else if (member instanceof Constructor) {
-            return TypeUtils.getTypes(((Constructor)member).getExceptionTypes());
-        } else {
+            return TypeUtils.getTypes(((Method) member).getExceptionTypes());
+        }
+        else if (member instanceof Constructor) {
+            return TypeUtils.getTypes(((Constructor) member).getExceptionTypes());
+        }
+        else {
             throw new IllegalArgumentException("Cannot get exception types of a field");
         }
     }
 
     public static Signature getSignature(Member member) {
         if (member instanceof Method) {
-            return new Signature(member.getName(), Type.getMethodDescriptor((Method)member));
-        } else if (member instanceof Constructor) {
-            Type[] types = TypeUtils.getTypes(((Constructor)member).getParameterTypes());
+            return new Signature(member.getName(), Type.getMethodDescriptor((Method) member));
+        }
+        else if (member instanceof Constructor) {
+            Type[] types = TypeUtils.getTypes(((Constructor) member).getParameterTypes());
             return new Signature(Constants.CONSTRUCTOR_NAME,
-                                 Type.getMethodDescriptor(Type.VOID_TYPE, types));
+                    Type.getMethodDescriptor(Type.VOID_TYPE, types));
 
-        } else {
+        }
+        else {
             throw new IllegalArgumentException("Cannot get signature of a field");
         }
     }
@@ -182,10 +144,9 @@ public class ReflectUtils {
             int lparen = desc.indexOf('(');
             String className = desc.substring(0, lparen).trim();
             return getClass(className, loader).getConstructor(parseTypes(desc, loader));
-        } catch (ClassNotFoundException e) {
-            throw new CodeGenerationException(e);
-        } catch (NoSuchMethodException e) {
-            throw new CodeGenerationException(e);
+        }
+        catch (ClassNotFoundException | NoSuchMethodException ex) {
+            throw new CodeGenerationException(ex);
         }
     }
 
@@ -200,10 +161,9 @@ public class ReflectUtils {
             String className = desc.substring(0, dot).trim();
             String methodName = desc.substring(dot + 1, lparen).trim();
             return getClass(className, loader).getDeclaredMethod(methodName, parseTypes(desc, loader));
-        } catch (ClassNotFoundException e) {
-            throw new CodeGenerationException(e);
-        } catch (NoSuchMethodException e) {
-            throw new CodeGenerationException(e);
+        }
+        catch (ClassNotFoundException | NoSuchMethodException ex) {
+            throw new CodeGenerationException(ex);
         }
     }
 
@@ -212,7 +172,7 @@ public class ReflectUtils {
         int rparen = desc.indexOf(')', lparen);
         List params = new ArrayList();
         int start = lparen + 1;
-        for (;;) {
+        for (; ; ) {
             int comma = desc.indexOf(',', start);
             if (comma < 0) {
                 break;
@@ -225,7 +185,7 @@ public class ReflectUtils {
         }
         Class[] types = new Class[params.size()];
         for (int i = 0; i < types.length; i++) {
-            types[i] = getClass((String)params.get(i), loader);
+            types[i] = getClass((String) params.get(i), loader);
         }
         return types;
     }
@@ -241,7 +201,7 @@ public class ReflectUtils {
         while ((index = className.indexOf("[]", index) + 1) > 0) {
             dimensions++;
         }
-        StringBuffer brackets = new StringBuffer(className.length() - dimensions);
+        StringBuilder brackets = new StringBuilder(className.length() - dimensions);
         for (int i = 0; i < dimensions; i++) {
             brackets.append('[');
         }
@@ -251,28 +211,34 @@ public class ReflectUtils {
         String suffix = (dimensions > 0) ? ";" : "";
         try {
             return Class.forName(prefix + className + suffix, false, loader);
-        } catch (ClassNotFoundException ignore) { }
+        }
+        catch (ClassNotFoundException ignore) {
+        }
         for (int i = 0; i < packages.length; i++) {
             try {
                 return Class.forName(prefix + packages[i] + '.' + className + suffix, false, loader);
-            } catch (ClassNotFoundException ignore) { }
+            }
+            catch (ClassNotFoundException ignore) {
+            }
         }
         if (dimensions == 0) {
-            Class c = (Class)primitives.get(className);
+            Class c = (Class) primitives.get(className);
             if (c != null) {
                 return c;
             }
-        } else {
-            String transform = (String)transforms.get(className);
+        }
+        else {
+            String transform = (String) transforms.get(className);
             if (transform != null) {
                 try {
                     return Class.forName(brackets + transform, false, loader);
-                } catch (ClassNotFoundException ignore) { }
+                }
+                catch (ClassNotFoundException ignore) {
+                }
             }
         }
         throw new ClassNotFoundException(save);
     }
-
 
     public static Object newInstance(Class type) {
         return newInstance(type, Constants.EMPTY_CLASS_ARRAY, null);
@@ -282,8 +248,8 @@ public class ReflectUtils {
         return newInstance(getConstructor(type, parameterTypes), args);
     }
 
+    @SuppressWarnings("deprecation")
     public static Object newInstance(final Constructor cstruct, final Object[] args) {
-
         boolean flag = cstruct.isAccessible();
         try {
             if (!flag) {
@@ -291,18 +257,21 @@ public class ReflectUtils {
             }
             Object result = cstruct.newInstance(args);
             return result;
-        } catch (InstantiationException e) {
+        }
+        catch (InstantiationException e) {
             throw new CodeGenerationException(e);
-        } catch (IllegalAccessException e) {
+        }
+        catch (IllegalAccessException e) {
             throw new CodeGenerationException(e);
-        } catch (InvocationTargetException e) {
+        }
+        catch (InvocationTargetException e) {
             throw new CodeGenerationException(e.getTargetException());
-        } finally {
+        }
+        finally {
             if (!flag) {
                 cstruct.setAccessible(flag);
             }
         }
-
     }
 
     public static Constructor getConstructor(Class type, Class[] parameterTypes) {
@@ -310,13 +279,13 @@ public class ReflectUtils {
             Constructor constructor = type.getDeclaredConstructor(parameterTypes);
             constructor.setAccessible(true);
             return constructor;
-        } catch (NoSuchMethodException e) {
+        }
+        catch (NoSuchMethodException e) {
             throw new CodeGenerationException(e);
         }
     }
 
-    public static String[] getNames(Class[] classes)
-    {
+    public static String[] getNames(Class[] classes) {
         if (classes == null)
             return null;
         String[] names = new String[classes.length];
@@ -354,7 +323,7 @@ public class ReflectUtils {
             }
         }
         methods.remove(null);
-        return (Method[])methods.toArray(new Method[methods.size()]);
+        return (Method[]) methods.toArray(new Method[methods.size()]);
     }
 
     public static PropertyDescriptor[] getBeanProperties(Class type) {
@@ -380,41 +349,39 @@ public class ReflectUtils {
             for (int i = 0; i < all.length; i++) {
                 PropertyDescriptor pd = all[i];
                 if ((read && pd.getReadMethod() != null) ||
-                    (write && pd.getWriteMethod() != null)) {
+                        (write && pd.getWriteMethod() != null)) {
                     properties.add(pd);
                 }
             }
-            return (PropertyDescriptor[])properties.toArray(new PropertyDescriptor[properties.size()]);
-        } catch (IntrospectionException e) {
+            return (PropertyDescriptor[]) properties.toArray(new PropertyDescriptor[properties.size()]);
+        }
+        catch (IntrospectionException e) {
             throw new CodeGenerationException(e);
         }
     }
 
-
-
     public static Method findDeclaredMethod(final Class type,
                                             final String methodName, final Class[] parameterTypes)
-    throws NoSuchMethodException {
+            throws NoSuchMethodException {
 
         Class cl = type;
         while (cl != null) {
             try {
                 return cl.getDeclaredMethod(methodName, parameterTypes);
-            } catch (NoSuchMethodException e) {
+            }
+            catch (NoSuchMethodException e) {
                 cl = cl.getSuperclass();
             }
         }
         throw new NoSuchMethodException(methodName);
-
     }
 
     public static List addAllMethods(final Class type, final List list) {
-
-
         if (type == Object.class) {
             list.addAll(OBJECT_METHODS);
-        } else
-            list.addAll(Arrays.asList(type.getDeclaredMethods()));
+        }
+        else
+            list.addAll(java.util.Arrays.asList(type.getDeclaredMethods()));
 
         Class superclass = type.getSuperclass();
         if (superclass != null) {
@@ -438,12 +405,6 @@ public class ReflectUtils {
     }
 
 
-    /**
-     * 从只能有一个方法的接口类中找出定义的方法
-     *
-     * @param iface 只有一个方法的接口类
-     * @return 接口方法
-     */
     public static Method findInterfaceMethod(Class iface) {
         if (!iface.isInterface()) {
             throw new IllegalArgumentException(iface + " is not an interface");
@@ -455,25 +416,109 @@ public class ReflectUtils {
         return methods[0];
     }
 
+    // SPRING PATCH BEGIN
     public static Class defineClass(String className, byte[] b, ClassLoader loader) throws Exception {
-        return defineClass(className, b, loader, PROTECTION_DOMAIN);
+        return defineClass(className, b, loader, null, null);
     }
 
-    public static Class defineClass(String className, byte[] b, ClassLoader loader, ProtectionDomain protectionDomain) throws Exception {
-        Class c;
-        if (DEFINE_CLASS != null) {
-            Object[] args = new Object[]{className, b, new Integer(0), new Integer(b.length), protectionDomain };
-            c = (Class)DEFINE_CLASS.invoke(loader, args);
-        } else if (DEFINE_CLASS_UNSAFE != null) {
-            Object[] args = new Object[]{className, b, new Integer(0), new Integer(b.length), loader, protectionDomain };
-            c = (Class)DEFINE_CLASS_UNSAFE.invoke(UNSAFE, args);
-        } else {
-            throw new CodeGenerationException(THROWABLE);
+    public static Class defineClass(String className, byte[] b, ClassLoader loader,
+                                    ProtectionDomain protectionDomain) throws Exception {
+
+        return defineClass(className, b, loader, protectionDomain, null);
+    }
+
+    @SuppressWarnings("deprecation")
+    public static Class defineClass(String className, byte[] b, ClassLoader loader,
+                                    ProtectionDomain protectionDomain, Class<?> contextClass) throws Exception {
+
+        Class c = null;
+        Throwable t = THROWABLE;
+
+        // Preferred option: JDK 9+ Lookup.defineClass API if ClassLoader matches
+        if (contextClass != null && contextClass.getClassLoader() == loader) {
+            try {
+                MethodHandles.Lookup lookup = MethodHandles.privateLookupIn(contextClass, MethodHandles.lookup());
+                c = lookup.defineClass(b);
+            }
+            catch (LinkageError | IllegalArgumentException ex) {
+                // in case of plain LinkageError (class already defined)
+                // or IllegalArgumentException (class in different package):
+                // fall through to traditional ClassLoader.defineClass below
+                t = ex;
+            }
+            catch (Throwable ex) {
+                throw new CodeGenerationException(ex);
+            }
         }
+
+        // Direct defineClass attempt on the target Classloader
+        if (c == null) {
+            if (protectionDomain == null) {
+                protectionDomain = PROTECTION_DOMAIN;
+            }
+
+            // Look for publicDefineClass(String name, byte[] b, ProtectionDomain protectionDomain)
+            try {
+                Method publicDefineClass = loader.getClass().getMethod(
+                        "publicDefineClass", String.class, byte[].class, ProtectionDomain.class);
+                c = (Class) publicDefineClass.invoke(loader, className, b, protectionDomain);
+            }
+            catch (InvocationTargetException ex) {
+                if (!(ex.getTargetException() instanceof UnsupportedOperationException)) {
+                    throw new CodeGenerationException(ex.getTargetException());
+                }
+                // in case of UnsupportedOperationException, fall through
+                t = ex.getTargetException();
+            }
+            catch (Throwable ex) {
+                // publicDefineClass method not available -> fall through
+                t = ex;
+            }
+
+            // Classic option: protected ClassLoader.defineClass method
+            if (c == null && classLoaderDefineClassMethod != null) {
+                Object[] args = new Object[]{className, b, 0, b.length, protectionDomain};
+                try {
+                    if (!classLoaderDefineClassMethod.isAccessible()) {
+                        classLoaderDefineClassMethod.setAccessible(true);
+                    }
+                    c = (Class) classLoaderDefineClassMethod.invoke(loader, args);
+                }
+                catch (InvocationTargetException ex) {
+                    throw new CodeGenerationException(ex.getTargetException());
+                }
+                catch (Throwable ex) {
+                    // Fall through if setAccessible fails with InaccessibleObjectException on JDK 9+
+                    // (on the module path and/or with a JVM bootstrapped with --illegal-access=deny)
+                    if (!ex.getClass().getName().endsWith("InaccessibleObjectException")) {
+                        throw new CodeGenerationException(ex);
+                    }
+                    t = ex;
+                }
+            }
+        }
+
+        // Fallback option: JDK 9+ Lookup.defineClass API even if ClassLoader does not match
+        if (c == null && contextClass != null && contextClass.getClassLoader() != loader) {
+            try {
+                MethodHandles.Lookup lookup = MethodHandles.privateLookupIn(contextClass, MethodHandles.lookup());
+                c = lookup.defineClass(b);
+            }
+            catch (Throwable ex) {
+                throw new CodeGenerationException(ex);
+            }
+        }
+
+        // No defineClass variant available at all?
+        if (c == null) {
+            throw new CodeGenerationException(t);
+        }
+
         // Force static initializers to run.
         Class.forName(className, true, loader);
         return c;
     }
+    // SPRING PATCH END
 
     public static int findPackageProtected(Class[] classes) {
         for (int i = 0; i < classes.length; i++) {
@@ -488,20 +533,25 @@ public class ReflectUtils {
         final Signature sig = getSignature(member);
         return new MethodInfo() {
             private ClassInfo ci;
+
             public ClassInfo getClassInfo() {
                 if (ci == null)
                     ci = ReflectUtils.getClassInfo(member.getDeclaringClass());
                 return ci;
             }
+
             public int getModifiers() {
                 return modifiers;
             }
+
             public Signature getSignature() {
                 return sig;
             }
+
             public Type[] getExceptionTypes() {
                 return ReflectUtils.getExceptionTypes(member);
             }
+
             public Attribute getAttribute() {
                 return null;
             }
@@ -516,19 +566,15 @@ public class ReflectUtils {
         final Type type = Type.getType(clazz);
         final Type sc = (clazz.getSuperclass() == null) ? null : Type.getType(clazz.getSuperclass());
         return new ClassInfo() {
-            @Override
             public Type getType() {
                 return type;
             }
-            @Override
             public Type getSuperType() {
                 return sc;
             }
-            @Override
             public Type[] getInterfaces() {
                 return TypeUtils.getTypes(clazz.getInterfaces());
             }
-            @Override
             public int getModifiers() {
                 return clazz.getModifiers();
             }
@@ -536,8 +582,7 @@ public class ReflectUtils {
     }
 
     // used by MethodInterceptorGenerated generated code
-    public static Method[] findMethods(String[] namesAndDescriptors, Method[] methods)
-    {
+    public static Method[] findMethods(String[] namesAndDescriptors, Method[] methods) {
         Map map = new HashMap();
         for (int i = 0; i < methods.length; i++) {
             Method method = methods[i];
@@ -545,11 +590,12 @@ public class ReflectUtils {
         }
         Method[] result = new Method[namesAndDescriptors.length / 2];
         for (int i = 0; i < result.length; i++) {
-            result[i] = (Method)map.get(namesAndDescriptors[i * 2] + namesAndDescriptors[i * 2 + 1]);
+            result[i] = (Method) map.get(namesAndDescriptors[i * 2] + namesAndDescriptors[i * 2 + 1]);
             if (result[i] == null) {
                 // TODO: error?
             }
         }
         return result;
     }
+
 }
